- Smoothed out page transitions. - Refactored the route preloading animation. - Made some layout tweaks on the contact form. - Tightened up the docs. - Fixed a few minor layout issues.

--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -4,6 +4,8 @@ body {
 
 .no-scroll {
     overflow-y: hidden!important;
+    position: fixed;
+    width: 100%;
 }
 
 .container-xxl {
